# single_line_thing

./: main.py  pyproject.toml  test_.py
output/: _1.py
